
cmake_minimum_required(VERSION 3.13)
project(c_plus_plus_study CXX)

add_subdirectory(sec0_vscode)
add_subdirectory(sec1_basic1)
add_subdirectory(sec2_basic2)
add_subdirectory(sec3_class)
add_subdirectory(sec4_compile_build)
add_subdirectory(sec5_pointer_reference)
add_subdirectory(sec6_operator)
add_subdirectory(sec7_derived_class)
add_subdirectory(sec8_io)
add_subdirectory(sec9_template)
add_subdirectory(sec10_exception)