cmake_minimum_required(VERSION 3.13)
project(sec12 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(practice_12_2 src/practice2.cpp)
add_executable(practice_12_3 src/practice3.cpp)
add_executable(practice_12_4 src/practice4.cpp)
add_executable(practice_12_5 src/practice5.cpp)
add_executable(practice_12_6 src/practice6.cpp)
add_executable(practice_12_section_check src/practice_section_check.cpp)
