cmake_minimum_required(VERSION 3.0.0)
project(sec3 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(practice_3_1 src/practice1.cpp)
add_executable(practice_3_2 src/practice2.cpp)
add_executable(practice_3_3 src/practice3.cpp)
add_executable(practice_3_4 src/practice4.cpp)
add_executable(practice_3_5 src/practice5.cpp)
add_executable(practice_3_6 src/practice6.cpp)
add_executable(practice_3_8 src/practice8.cpp)
add_executable(practice_3_9 src/practice9.cpp)
add_executable(practice_3_section_check src/practice_section_check.cpp)

