cmake_minimum_required(VERSION 3.10.0)
project(sec5 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(practice_5_1 src/practice1.cpp)
add_executable(practice_5_2 src/practice2.cpp)
add_executable(practice_5_3 src/practice3.cpp)
add_executable(practice_5_4 src/practice4.cpp)
add_executable(practice_5_5 src/practice5.cpp)
add_executable(practice_5_7 src/practice7.cpp)
add_executable(practice_5_8 src/practice8.cpp)
add_executable(practice_5_9 src/practice9.cpp)
add_executable(practice_5_10 src/practice10.cpp)
add_executable(practice_5_section_check src/practice_section_check.cpp)
