
cmake_minimum_required(VERSION 3.10.0)
project(sec6 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(practice_6_2 src/practice2.cpp)
add_executable(practice_6_3 src/practice3.cpp)
add_executable(practice_6_4 src/practice4.cpp)
add_executable(practice_6_5 src/practice5.cpp)
add_executable(practice_6_7 src/practice7.cpp)
add_executable(practice_6_8 src/practice8.cpp)
add_executable(practice_6_9 src/practice9.cpp)
add_executable(practice_6_10 src/practice10.cpp)
add_executable(practice_6_11 src/practice11.cpp)
add_executable(practice_6_section_check src/practice_section_check.cpp)
