
cmake_minimum_required(VERSION 3.10.0)
project(sec7 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(practice_7_2 src/practice2.cpp)
add_executable(practice_7_4 src/practice4.cpp)
add_executable(practice_7_5 src/practice5.cpp)
add_executable(practice_7_6 src/practice6.cpp)
add_executable(practice_7_7 src/practice7.cpp)
add_executable(practice_7_section_check src/practice_section_check.cpp)