
cmake_minimum_required(VERSION 3.10.0)
project(sec8 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(practice_8_2 src/practice2.cpp)
add_executable(practice_8_3 src/practice3.cpp)
add_executable(practice_8_4 src/practice4.cpp)
add_executable(practice_8_5 src/practice5.cpp)
add_executable(practice_8_6 src/practice6.cpp)
add_executable(practice_8_7 src/practice7.cpp)
add_executable(practice_8_8 src/practice8.cpp)
add_executable(practice_8_section_check src/practice_section_check.cpp)